--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
     "next": "16.0.3",
+    "nodemailer": "^6.9.15",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "resend": "^6.4.2"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
