--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@supabase/supabase-js": "^2.81.1",
     "@swc/helpers": "^0.5.17",
     "next": "16.0.3",
+    "nodemailer": "^6.9.13",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "resend": "^6.4.2"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
